Working random quote generator using 4 ajax methods: XHR, fetch, jQuery, and Axios.

--- a/ajax-ron-swanson/index.html
+++ b/ajax-ron-swanson/index.html
@@ -36,7 +36,7 @@
             border: 2px solid #1abc9c;
             color: #1abc9c;
             letter-spacing: 1px;
-            text-shadow: 0;
+            text-shadow: none;
             font-size: 12px;
             font-weight: bold;
             cursor: pointer;
